# navel

./: .gitmodules  CMakeLists.txt  README.md
extlibs/: CMakeLists.txt
source/: CMakeLists.txt  main.cpp
source/core/hooks/: CMakeLists.txt  HookingManager.cpp  HookingManager.h
source/ssdk/: BaseEntity.cpp  BaseEntity.h  CMakeLists.txt  InterfaceFactory.h  UserCmd.cpp  UserCmd.h  offsets.h
source/utils/: CMakeLists.txt  memory.cpp  memory.h
